# BloxAPI

./: .gitignore  .replit  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  app.json  app.py  docker-compose.yml  fixgit.sh  models.py  pyproject.toml  render.yaml  vercel.json  web_scraper_example.py  widget_builder.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  linguist.yml
.github_backup/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  linguist.yml
badges/: feature-count.json  python-versions.json  security.json  version.json
routes/: advanced_analytics.py  ai_services.py  analytics.py  assets.py  auth.py  avatars.py  badges.py  business_intelligence.py  caching.py  catalog.py  chat.py  cloud.py  content_creation.py  content_management.py  develop.py  developer_platform.py  economy.py  education.py  events.py  external.py  friends.py  games.py  graphql_route.py  groups.py  integrated_analytics.py  inventory.py  localization.py  marketplace.py  metaverse.py  moderation.py  monetization.py  monitoring.py  notifications.py  physics.py  platform_integrations.py  presence.py  security.py  security_routes.py  servers.py  social.py  (+8 more)
scripts/: entrypoint.sh  update_readme_stats.py
static/: index.html
templates/: base.html  documentation.html  index.html  integrations.html
utils/: auto_scaling.py  cache.py  data_exporter.py  data_migration.py  data_visualization.py  demo_data.json  encryption.py  external_apis.py  external_integrations.py  fraud_detection.py  functions_extra.py  graphql_schema.py  rate_limiter.py  redis_cache.py  (+10 more)
(+35 files in other folders)
