[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-restful>=0.3.10",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "marshmallow==3.19.0",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
    "trafilatura>=2.0.0",
    "ariadne>=0.26.2",
    "tweepy>=4.15.0",
    "pydantic>=2.11.3",
    "graphene>=3.4.3",
    "marshmallow-dataclass>=8.7.1",
    "cryptography>=44.0.2",
    "fastapi>=0.115.12",
    "dataclasses-json>=0.6.7",
    "prometheus-client>=0.21.1",
    "discord-py>=2.5.2",
    "flask-limiter>=3.12",
    "redis>=5.2.1",
    "flask-graphql>=2.0.0",
    "psutil>=7.0.0",
    "pillow>=11.2.1",
    "numpy>=2.2.5",
    "matplotlib>=3.10.1",
    "svgwrite>=1.4.3",
]
